--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,18 +20,17 @@ services: # Образы контейнера
 
 
   app: # Само приложение
-    build: . # Указывает на текущую директорию, где находится
+    build: . # Указывает на текущую директорию, где находится.
     env_file:
       - .env
     tty: true # Даёт возможность использовать команды терминала
     command: > # Команда для терминала
       bash -c "python manage.py migrate && python manage.py runserver 0.0.0.0:8000"
-    volumes: # Монтирует текущую директорию на контейнер, позволяя вам вносить изменения в код приложения без пересборки образа.
+    volumes: # Монтирует текущую директорию на контейнер, позволяя менять в код приложения без пересборки образа.
       - .:/app
     ports:
       - '8001:8000'
     depends_on: # Зависимость не запускать сборку, пока не готова БД.
-#      - db
       db:
         condition: service_healthy
 
