--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,8 @@ djangorestframework-simplejwt = "^5.3.0"
 coverage = "^7.3.2"
 drf-yasg = "^1.21.7"
 django-cors-headers = "^4.2.0"
+django-celery-beat = "^2.5.0"
+redis = "^5.0.1"
 
 
 [build-system]
